<resources>
    <string name="app_name">DarshanLab10</string>
    <string name="app_description">Design Bottom Navigation Application</string>
    <string name="design_by">Design by Darshan Prajapati - n01584247 ©</string>
    <string name="da1rshan">Da1rshan</string>
    <string name="pr2ajapati">Pr2ajapati</string>
    <string name="n013584247">n013584247</string>
    <string name="d4p">D4P</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name_id">Darshan Prajapati n0158</string>
    <string name="download_image">Download Image</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="id">N01584247</string>
    <string name="temperature">Temperature</string>
    <string name="weather_info">Weather Info</string>
    <string name="name_id">Darshan Prajapati N01584247</string>
    <string name="location">Location</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/9214589741</string>
    <string name="full_name">Darshan Prajapati</string>
    <string name="location_is_not_determined">Location is not determined</string>
    <string name="location_permission_is_required">Location permission is required</string>

    <string-array name="cities_array">
        <item>Toronto</item>
        <item>London</item>
        <item>New York</item>
        <item>Tokyo</item>
        <item>Sydney</item>
    </string-array>


    <string-array name="cities_coordinates">
        <item>43.6532,-79.3832</item> <!-- Toronto, Canada -->
        <item>51.5074,-0.1278</item>   <!-- London, UK -->
        <item>40.7128,-74.0060</item>   <!-- New York, USA -->
        <item>35.6895,139.6917</item>   <!-- Tokyo, Japan -->
        <item>-33.8688,151.2093</item>  <!-- Sydney, Australia -->
    </string-array>

    <string-array name="video_urls">
        <item>https://www.youtube.com/embed/drQK8ciCAjY</item>
        <item>https://www.youtube.com/embed/NCoekcDxbrI</item>
        <item>https://www.youtube.com/embed/gcboferZBoU</item>
    </string-array>

    <string-array name="video_titles">
        <item>Java in one shot</item>
        <item>Intro to Android Studio</item>
        <item>New in Android</item>
    </string-array>
</resources>