<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightCyan"
    tools:context=".Pr2ajapatiFragment">

    <TextView
        android:id="@+id/darIdTV"
        android:layout_width="277dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="92dp"
        android:text="@string/id"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/darTempRadioGroup"
        android:layout_width="281dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="160dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/darCelsiusRadioButton"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:text="@string/celsius"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/darFahrenheitRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:textStyle="bold" />

    </RadioGroup>

    <Spinner
        android:id="@+id/darCitySpinner"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="248dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/darTempTV"
        android:layout_width="274dp"
        android:layout_height="29dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="345dp"
        android:text="@string/temperature"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/darWeatherTV"
        android:layout_width="281dp"
        android:layout_height="279dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="409dp"
        android:text="@string/weather_info"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>